--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,2 +1,4 @@
 {% extends "global/base.html" %}
-{% block texto %} Mudar o texto {% endblock texto %}
+{% block texto %} 
+  {{ text }}
+{% endblock texto %}
