--- a/base/static/global/css/style.css
+++ b/base/static/global/css/style.css
@@ -11,3 +11,21 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+.content {
+  display: grid;
+  gap: 1.5rem;
+  padding: 1.5rem;
+}
+
+.post {
+  background: #fff;
+  padding: 1.5rem;
+  box-shadow: 5px 2px 5px rgba(0, 0, 0, 20%);
+}
+
+@media (min-width: 1027px) {
+  .content {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
