--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -2,3 +2,9 @@
 {% block texto %} 
   {{ text }}
 {% endblock texto %}
+
+{% block posts %}
+    {% include "global/partials/postblock.html" %}
+    {% include "global/partials/postblock.html" %}
+    {% include "global/partials/postblock.html" %}
+{% endblock posts %}
