--- a/base/global/partials/postblock.html
+++ b/base/global/partials/postblock.html
@@ -1,12 +1,8 @@
 <article class="post">
   <header>
-    <h2 class="post__title">Lorem ipsum dolor sit amet.</h2>
+    <h2 class="post__title">
+      <a href="{% url "blog:post" post.id %}"> {{post.title}} </a>
+    </h2>
   </header>
-  <div class="post__body">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore deleniti
-    magni facere ea dolorem quaerat veritatis sed ad sapiente, fuga obcaecati
-    sint assumenda voluptates possimus, vero, natus eligendi autem harum? Esse
-    ipsum voluptatum praesentium, nisi, vitae recusandae perspiciatis quasi ut
-    iste ipsa veniam molestias dolores deserunt provident, modi maxime velit!
-  </div>
+  <div class="post__body">{{post.body}}</div>
 </article>
