--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -4,7 +4,9 @@
 {% endblock texto %}
 
 {% block posts %}
-    {% include "global/partials/postblock.html" %}
-    {% include "global/partials/postblock.html" %}
-    {% include "global/partials/postblock.html" %}
+
+    {% for post in posts %}
+      {% include "global/partials/postblock.html" %}
+    {% endfor %}
+
 {% endblock posts %}
