--- a/base/static/global/css/style.css
+++ b/base/static/global/css/style.css
@@ -6,6 +6,16 @@
   box-sizing: border-box;
 }
 
+a {
+  color: #0078e8;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #0078e8;
+  text-decoration: underline;
+}
+
 body {
   background: #f1f1f1;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -24,8 +34,24 @@ body {
   box-shadow: 5px 2px 5px rgba(0, 0, 0, 20%);
 }
 
+.menu {
+  background: #000;
+  padding: 0 1.5rem;
+}
+
+.menu__links {
+  display: flex;
+  list-style: none;
+}
+
+.menu__links a {
+  display: block;
+  color: #fff;
+  padding: 1rem;
+}
+
 @media (min-width: 1027px) {
-  .content {
+  .content:not(:has(.single-post)) {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
   }
